--- a/BookSearch/LoginWindow.xaml
+++ b/BookSearch/LoginWindow.xaml
@@ -40,9 +40,9 @@
         <Button Grid.Row="2" Name="Return" Content="戻る"
                 Height="30" Width="55" FontSize="13" Margin="10"
                 HorizontalAlignment="Left" VerticalAlignment="Bottom" Click="Return_Click"/>
-        <Button Grid.Row="2" Name="Login" Content="ログイン" 
+        <Button Grid.Row="2" Name="Login" Content="ログイン"
                 Height="30" Width="70" FontSize="13" Margin="10"
-                HorizontalAlignment="Right" VerticalAlignment="Bottom" Click="Login_Click"/>
+                HorizontalAlignment="Right" VerticalAlignment="Bottom" Click="Login_Click" Background="#FF39CBAA"/>
         <Button Grid.Row="1" Name="newRegi" Content="新規登録" Background="SkyBlue" Foreground="Black"
                 Height="30" Width="85" FontSize="13" Margin="130,0,130,40" Grid.RowSpan="2"
                 HorizontalAlignment="Center" VerticalAlignment="Bottom" Click="newRegi_Click"/>
