--- a/BookSearch/MainWindow.xaml
+++ b/BookSearch/MainWindow.xaml
@@ -6,10 +6,19 @@
         xmlns:local="clr-namespace:BookSearch"
         xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" x:Name="TitleWindow" x:Class="BookSearch.MainWindow"
         mc:Ignorable="d"
-    ResizeMode="NoResize"
-        Title="MainWindow" Height="400" Width="550" >
-    <Grid Background="White">
-        <Button Name="login" Content="ログイン" FontSize="12" FontFamily="Yu Mincho" HorizontalAlignment="Left" Margin="222,267,0,0" VerticalAlignment="Top" Width="75" Background="#FFB9F9E5" Click="login_Click" Foreground="#DDFF0000"/>
-        <Button Name="endTile" Content="終了" FontSize="12" FontFamily="Yu Mincho" HorizontalAlignment="Left" Margin="222,323,0,0" VerticalAlignment="Top" Width="75" Background="#FFB9F9E5" Click="endTile_Click" Foreground="#DDFF0000"/>
+        ResizeMode="NoResize"
+        Title="MainWindow" Height="350" Width="500" WindowStyle="None">
+    <Grid Background="AliceBlue">
+        <Label Content="本の情報管理アプリ" FontFamily="Arial" FontSize="45" Margin="0,100,0,0"
+               HorizontalAlignment="Center" VerticalAlignment="Top"
+               FontWeight="Bold" Height="55" Width="375"/>
+
+        <Button Name="login" Content="ログイン" Width="75"
+                FontSize="12" FontFamily="Yu Mincho"
+                HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,100,60"
+                Background="LightSkyBlue" Foreground="Black" Click="login_Click"/>
+        <Button Name="endTile" Content="終了" FontSize="12" Width="75" Margin="100,0,0,60"
+                HorizontalAlignment="Center" VerticalAlignment="Bottom" FontFamily="Yu Mincho"
+                Background="LightSkyBlue" Foreground="Black" Click="endTile_Click"/>
     </Grid>
 </Window>
