--- a/BookSearch/BookmarkWindow.xaml
+++ b/BookSearch/BookmarkWindow.xaml
@@ -8,8 +8,8 @@
         ResizeMode="NoResize"
         Title="BookmarkWindow" Height="390" Width="800" WindowStyle="None" Loaded="Bookmark_Loaded">
     <Window.Resources>
-        <local:infosys202215DataSet x:Key="infosys202215DataSet"/>
-        <CollectionViewSource x:Key="bookMarkViewSource" Source="{Binding BookMark, Source={StaticResource infosys202215DataSet}}"/>
+        <local:infosys202215DataSet1 x:Key="infosys202215DataSet1"/>
+        <CollectionViewSource x:Key="bookMarkViewSource" Source="{Binding BookMark, Source={StaticResource infosys202215DataSet1}}"/>
     </Window.Resources>
 
     <Grid DataContext="{StaticResource bookMarkViewSource}">
