--- a/BookSearch/SearchResult.xaml
+++ b/BookSearch/SearchResult.xaml
@@ -9,10 +9,10 @@
         Title="SearchResult" Height="510" Width="500" WindowStyle="None" Loaded="Result_Loaded">
 
     <Window.Resources>
+        <local:infosys202215DataSet1 x:Key="infosys202215DataSet1"/>
+        <CollectionViewSource x:Key="bookMarkViewSource" Source="{Binding BookMark, Source={StaticResource infosys202215DataSet1}}"/>
         <local:infosys202215DataSet x:Key="infosys202215DataSet"/>
-        <CollectionViewSource x:Key="bookMarkViewSource" Source="{Binding BookMark, Source={StaticResource infosys202215DataSet}}"/>
-        <local:infosys202215DataSet2 x:Key="infosys202215DataSet2"/>
-        <CollectionViewSource x:Key="bookHistoryViewSource" Source="{Binding BookHistory, Source={StaticResource infosys202215DataSet2}}"/>
+        <CollectionViewSource x:Key="bookHistoryViewSource" Source="{Binding BookHistory, Source={StaticResource infosys202215DataSet}}"/>
     </Window.Resources>
     <Grid DataContext="{StaticResource bookMarkViewSource}">
         <Grid.RowDefinitions>
