--- a/BookSearch/SearchWindow.xaml
+++ b/BookSearch/SearchWindow.xaml
@@ -27,10 +27,12 @@
                  BorderThickness="0,0,0,1" BorderBrush="Black" TextChanged="text_TextChanged"/>
 
         <Button Name="search" Content="実行" Grid.Row="1" Height="30" Width="60"
-                HorizontalAlignment="Center" VerticalAlignment="Top" Click="search_Click"/>
+                HorizontalAlignment="Center" VerticalAlignment="Top" Click="search_Click"
+                BorderBrush="Black" Background="#FF8BFFE5" Foreground="Black"/>
 
         <Button Name="return" Content="戻る" Grid.Row="2" Height="30" Width="60" Margin="10"
-                HorizontalAlignment="Left" VerticalAlignment="Bottom" Click="return_Click"/>
+                HorizontalAlignment="Left" VerticalAlignment="Bottom" Click="return_Click"
+                BorderBrush="Black" Background="White" Foreground="Black"/>
 
         <ListView Name="list" Grid.Row="2" Height="300" Width="300" Margin="0,20,0,0"
                   VerticalAlignment="Top" HorizontalAlignment="Center"
@@ -52,6 +54,7 @@
                  BorderThickness="1" BorderBrush="Black"/>
 
         <Button Name="decision" Content="検索" Grid.Row="2" Height="30" Width="60" Margin="0,0,0,10"
-                HorizontalAlignment="Center" VerticalAlignment="Bottom" Click="decision_Click"/>
+                HorizontalAlignment="Center" VerticalAlignment="Bottom" Click="decision_Click"
+                BorderBrush="Black" Background="#FF8BFFE5" Foreground="Black"/>
     </Grid>
 </Window>
