--- a/BookSearch/MainWindow.xaml
+++ b/BookSearch/MainWindow.xaml
@@ -9,16 +9,16 @@
         ResizeMode="NoResize"
         Title="MainWindow" Height="350" Width="500" WindowStyle="None">
     <Grid Background="AliceBlue">
-        <Label Content="本の情報管理アプリ" FontFamily="Arial" FontSize="45" Margin="0,100,0,0"
+        <Label Content="本管理アプリ" FontFamily="Arial" FontSize="45" Margin="0,100,0,0"
                HorizontalAlignment="Center" VerticalAlignment="Top"
-               FontWeight="Bold" Height="55" Width="375"/>
-
+               FontWeight="Bold" Height="55" Width="245"/>
+        
         <Button Name="login" Content="ログイン" Width="75"
-                FontSize="12" FontFamily="Yu Mincho"
+                FontSize="12" FontFamily="Arial"
                 HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,100,60"
                 Background="#FFFBFFA7" Foreground="Black" Click="login_Click" BorderBrush="Black"/>
         <Button Name="endTile" Content="終了" FontSize="12" Width="75" Margin="100,0,0,60"
-                HorizontalAlignment="Center" VerticalAlignment="Bottom" FontFamily="Yu Mincho"
+                HorizontalAlignment="Center" VerticalAlignment="Bottom" FontFamily="Arial"
                 Background="LightSkyBlue" Foreground="Black" Click="endTile_Click" BorderBrush="Black"/>
     </Grid>
 </Window>
