--- a/BookSearch/SearchWindow.xaml
+++ b/BookSearch/SearchWindow.xaml
@@ -26,6 +26,8 @@
                  FontSize="16" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
                  BorderThickness="0,0,0,1" BorderBrush="Black" TextChanged="text_TextChanged"/>
 
+        <Label Content="※記号は使えません" Height="25" Width="105" Margin="0,90,200,0" Grid.RowSpan="2"/>
+
         <Button Name="search" Content="実行" Grid.Row="1" Height="30" Width="60"
                 HorizontalAlignment="Center" VerticalAlignment="Top" Click="search_Click"
                 BorderBrush="Black" Background="#FF8BFFE5" Foreground="Black"/>
@@ -51,7 +53,7 @@
         <TextBox x:Name="passTitle" Grid.Row="2" Height="35" Width="300" Margin="0,0,0,60"
                  HorizontalAlignment="Center" VerticalAlignment="Bottom"
                  FontSize="17" FontFamily="Yu Gothic" VerticalContentAlignment="Bottom"
-                 BorderThickness="1" BorderBrush="Black"/>
+                 BorderThickness="1" BorderBrush="Black" IsReadOnly="True"/>
 
         <Button Name="decision" Content="検索" Grid.Row="2" Height="30" Width="60" Margin="0,0,0,10"
                 HorizontalAlignment="Center" VerticalAlignment="Bottom" Click="decision_Click"
